# adr-rs

./: .gitignore  Cargo.toml  README.md  build.rs
adr/file/: 0001-record-architecture-decisions.md
doc/adr/: 0002-record-architecture-decisions.md  0003-some-boring-sample-file.md
src/: cmd.rs  main.rs
src/adr/: adr.rs  mod.rs
src/cmd/: config.rs  export.rs  import.rs  init.rs  link.rs  list.rs  mod.rs  new.rs  unlink.rs  update.rs
src/cmd/adr/: init.rs  link.rs  list.rs  mod.rs  new.rs  unlink.rs  update.rs
src/cmd/config/: init.rs  mod.rs  start.rs
src/cmd/project/: list.rs  mod.rs  new.rs  rename.rs  set.rs
src/utils/: config.rs  file.rs  mod.rs
tests/: cli.rs
