[package]
name = "adr-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4.21"
env_logger = "0.11.3"
confy = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.34", features = [
    "local-offset",
    "formatting",
    "macros",
] }
pulldown-cmark = { version = "0.9.2", default-features = false }
rand = "0.8.5"
chrono = "0.4.38"
lazy_static = "1.4.0"
regex = "1.10.4"


[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"

[build-dependencies]
clap_mangen = "0.2.20"
clap = { version = "4.5.4", features = ["derive"] }
